fix(styles): improve UI stability and font loading
- Prevent layout shifts by forcing scrollbar
- Change font-display to swap for better UX
- Reduce Flash of Unstyled Text

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -2,7 +2,7 @@
 @font-face {
   font-family: 'alabastr';
   src: url('/fonts/alabastr/190911085729alabastr.woff') format('woff');
-  font-display: optional;
+  font-display: swap;
 }
 
 /* SpartanMB - Theme font, fallback */
@@ -12,7 +12,7 @@
        url('/fonts/spartanmb/spartanmb-thin.woff') format('woff');
   font-weight: 100;
   font-style: normal;
-  font-display: optional;
+  font-display: swap;
 }
 @font-face {
   font-family: 'spartanmb';
@@ -20,7 +20,7 @@
        url('/fonts/spartanmb/spartanmb-light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
-  font-display: optional;
+  font-display: swap;
 }
 @font-face {
   font-family: 'spartanmb';
@@ -28,7 +28,7 @@
        url('/fonts/spartanmb/spartanmb-regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
-  font-display: optional;
+  font-display: swap;
 }
 @font-face {
   font-family: 'spartanmb';
@@ -36,7 +36,7 @@
        url('/fonts/spartanmb/spartanmb-semibold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
-  font-display: optional;
+  font-display: swap;
 }
 @font-face {
   font-family: 'spartanmb';
@@ -44,7 +44,7 @@
        url('/fonts/spartanmb/spartanmb-bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
-  font-display: optional;
+  font-display: swap;
 }
 @font-face {
   font-family: 'spartanmb';
@@ -52,7 +52,7 @@
        url('/fonts/spartanmb/spartanmb-extra-bold.woff') format('woff');
   font-weight: 800;
   font-style: normal;
-  font-display: optional;
+  font-display: swap;
 }
 @font-face {
   font-family: 'spartanmb';
@@ -60,7 +60,7 @@
        url('/fonts/spartanmb/spartanmb-black.woff') format('woff');
   font-weight: 900;
   font-style: normal;
-  font-display: optional;
+  font-display: swap;
 }
 
 /* Open Sans - Body font (self-hosted, previously Google Fonts) */
